fix: make email URLs configurable via raccoon.baseUrl property in t… (#253)